# ai-dotfiles

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  ORCHESTRATION-REPORT.md  PLAN.md  README.md  ai-dotfiles-blueprint.md  pyproject.toml  python-cli-standards.md
.github/workflows/: ci.yml
src/ai_dotfiles/: __main__.py  cli.py  ui.py
tasks/: gitignore-auto-manage.md  mcp-fragments.md  step-01-skeleton.md  step-02a-paths.md  step-02c-manifest.md  step-04-init.md  step-05-install.md  step-07a-list.md  step-07b-status.md  step-07d-domain.md  step-07e-stack.md  step-08-vendor.md  step-09-cli-wiring.md  step-10-readme.md  vendor-02-github.md  vendor-03-npx_skills.md  vendor-04-cli.md  vendor-P0-deps-refactor.md  vendor-P1-search-rename.md  vendor-Q0-repo-cache.md  vendor-Q1-buildwithclaude.md  vendor-Q2-tonsofskills.md  vendor-unified-search.md
tasks/done/: step-00-infrastructure.md  step-02b-elements.md  step-02d-symlinks.md  step-02e-settings-merge.md  step-02f-git-ops.md  step-03-scaffold.md  step-06-add-remove.md  step-07c-create-delete.md  vendor-01-core.md  vendor-05-docs.md  vendor-P2-paks.md  vendor-Q3-docs.md
tasks/gitignore-auto-manage/: 01-core-module.md  02-wire-commands.md  03-tests.md  04-docs.md
tasks/mcp-fragments/: 01-core-merge.md  02-ownership.md  03-wire-commands.md  04-tests.md  05-docs.md
tasks/vendor-unified-search/: 01-list-install-urls.md  02-search-command.md  03-docs.md
tests/: conftest.py
tests/e2e/: test_cli.py  test_create_delete.py  test_domain.py  test_gitignore_cli.py  test_list.py  test_mcp_cli.py  test_stack.py  test_status.py  test_vendor.py  test_vendor_buildwithclaude.py  test_vendor_github.py  test_vendor_meta.py  test_vendor_npx_skills.py  test_vendor_paks.py  test_vendor_skills_sh.py  test_vendor_tonsofskills.py
tests/integration/: test_add_remove.py  test_init.py  (+11 more)
(+81 files in other folders)
