[tool.poetry]
name = "ai-dotfiles"
version = "0.1.0"
description = "Package manager for Claude Code configuration"
authors = ["Pavel Gorlov"]
readme = "README.md"
license = "MIT"
packages = [{ include = "ai_dotfiles", from = "src" }]
include = [
    { path = "src/ai_dotfiles/scaffold/templates/**/*", format = ["sdist", "wheel"] },
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
click = "^8.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.16"
pytest = "^8.4"
pytest-cov = "^4.1"
black = "^24.4"
ruff = "^0.12"
pre-commit = "^3.7"
commitizen = "^3.23"

[tool.poetry.scripts]
ai-dotfiles = "ai_dotfiles.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ── Tool configs ──

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
mypy_path = "src"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "T20", # flake8-print
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow",
    "integration: integration tests (filesystem, symlinks)",
]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
